landing_index.css
html {
   position: relative;
   min-height: 100%;
}

body {
   margin-bottom: 100px;
   padding-top: 90px;
}

.navbar-fixed-top {
   border-bottom: 1px solid #dddddd;
   background: #f5f5f5;
}

#main_nav {
   background-color: #f5f5f5;
   border-color: #f5f5f5;
   margin-bottom: 0px;
}

#main_nav .navbar-header {
   border: 0px solid #dddddd;
}

.main_nav_padding_top {
   height: 20px;
}

.main_nav_padding_bottom {
   height: 0px;
}

#main_logo {
   width: 100%;
   padding-top: 7px;
   max-width: 180px;
}

#phone_logo_a {
   padding-left: 10px;
   padding-top: 5px;
   padding-right: 0px;
   padding-bottom: 5px;
}

#phone_logo_img {
   height: 100%;
}

.nav_link_li a {
   border-radius: 10px;
   font-weight: bold;
}

#email_check_box_container {
   margin-top: 30px;
}

#main_pigeon_img {
   max-width: 100%;
   height: 250px;
}

#email_check_box {
   background-color: #f5f5f5;
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   border-radius: 5px;
   padding-top: 20px;
   padding-left: 20px;
   padding-right: 20px;
   padding-bottom: 20px;
}

#email_check_box .ecb_top {
   height: 20%;
   text-align: center;
}

#email_check_box .ecb_top h2 {
   margin-top: 0px;
}

#email_check_box .ecb_bottom {
   height: 80%;
   padding-top: 10px;
}

#email_check_box .ecb_bottom .brief_summary {
   font-size: 20px;
   margin-top: 25px;
   text-align: center;
}

#btn_viewall {
   margin-top: 15px;
   width: 200px;
   font-weight: bold;
   outline: none;
}

#features_section {
   background-color: #f5f5f5;
   margin-top: 60px;
   padding-top: 10px;
   padding-bottom: 30px;
}

#features_section h2 {
   margin-bottom: 20px;
}

#features_section .item {
   position: relative;
}

#features_section .item .icon-holder {
   position: absolute;
   left: 30px;
   top: 20px;
   color: #f0ad4e;
   font-size: 25px;
}

#features_section .content {
   padding-left: 60px;
}

#pricing_section {
   margin-top: 30px;
}

.pricing_row {
   margin-top: 35px;
}

.pricing_card {
   background-color: #f5f5f5;
   border-radius: 5px;
   border-style: solid;
   border-width: 1px;
   border-color: #003843;
   text-align: center;
}

.pricing_card .title {
   background-color: #003843;
   color: white;
   margin-top: 0px;
   margin-bottom: 0px;
   padding-top: 10px;
   padding-bottom: 10px;
}

.pricing_card .price {
   margin-top: 0px;
   margin-bottom: 0px;
   padding-top: 20px;
   padding-bottom: 20px;
}

.pricing_card .buy {
   padding-bottom: 20px;
}

.pricing_card .buy button {
   padding-top: 10px;
   padding-bottom: 10px;
   width: 50%;
   font-weight: bold;
}

#pricing_section .cad_note {
   text-align: right;
   margin-top: 10px;
   font-style: italic;
}

#pricing_section .extra_features {
   margin-top: 40px;
}

#pricing_section .extra_features ul {
   font-size: 17px;
}

#contact_section {
   margin-top: 30px;
   background-color: #f5f5f5;
   padding-bottom: 20px;
}

#contact_section .content {
   font-size: 20px;
   margin-top: 30px;
   line-height: 20px;
}

.footer {
   position: absolute;
   bottom: 0;
   width: 100%;
   /* Set the fixed height of the footer here */
   height: 60px;
   background-color: #f5f5f5;
}

.footer .text-muted {
   margin: 20px 0px;
}

